<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatActivity">
    <TextView
        android:id="@+id/stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        android:textSize="35sp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happy"
        android:layout_below="@id/stat"
        android:layout_marginLeft="10dp"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/happy"/>
    <ProgressBar
        android:layout_below="@+id/happy"
        android:layout_toRightOf="@+id/month"
        android:layout_marginTop="5dp"
        android:id="@+id/progressBar1"
        android:layout_width="320dp"
        android:layout_centerHorizontal="true"
        android:layout_height="50dp"
        android:max="5"
        android:progressDrawable="@drawable/custom_progressbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

    <TextView
        android:id="@+id/week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/week"
        android:textSize="20sp"
        android:layout_marginTop="35dp"
        android:layout_below="@id/day"/>
    <ProgressBar
        android:layout_below="@+id/progressBar1"
        android:layout_toRightOf="@+id/month"
        android:layout_marginTop="13dp"
        android:id="@+id/progressBar2"
        android:layout_width="320dp"
        android:layout_centerHorizontal="true"
        android:layout_height="50dp"
        android:max="35"
        android:progressDrawable="@drawable/custom_progressbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:textSize="20sp"
        android:layout_marginTop="35dp"
        android:layout_below="@id/week"/>

    <ProgressBar
        android:layout_below="@+id/progressBar2"
        android:layout_toRightOf="@+id/month"
        android:layout_marginTop="11dp"
        android:id="@+id/progressBar3"
        android:layout_width="320dp"
        android:layout_centerHorizontal="true"
        android:layout_height="50dp"
        android:max="155"
        android:progressDrawable="@drawable/custom_progressbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
</RelativeLayout>