<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffffff">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/titleTv"
        android:background="#8B89FF" />

    <ListView
        android:id="@+id/mainLv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll"
        android:layout_below="@+id/titleTv"/>

    <TextView
        android:id="@+id/botBorder"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/ll"
        android:background="#8B89FF" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/botBorder"
        android:background="#8B89FF"/>
    <LinearLayout
        android:id="@+id/ll"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <Button
            android:id="@+id/statBt"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/stat"
            android:background="@drawable/bt_border"/>
        <Button
            android:id="@+id/calendarBt"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/calendar"
            android:textSize="12sp"
            android:background="@drawable/bt_border"/>

        <Button
            android:id="@+id/addBt"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:text="+"
            android:textSize="12sp"
            android:layout_weight="1"
            android:background="@drawable/bt_border"/>

        <Button
            android:id="@+id/searchBt"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:text="@string/search"
            android:textSize="15sp"
            android:layout_weight="1"
            android:background="@drawable/bt_border"/>

    </LinearLayout>

-->


</RelativeLayout>